增加作用域函数说明

--- a/src/com/zxl/study/basics/基础说明.md
+++ b/src/com/zxl/study/basics/基础说明.md
@@ -1,3 +1,14 @@
 - as关键字
 > 智能类型转换：当一个父类对象在转换成一个子类类型后，后续可以直接使用子类方法，不需要再次进行转换
 
+- Lambda有缺点
+1、可以让你更灵活的编写应用，但是会存在内存开销
+2、在jvm上，定义的lambda会以对象实例的形式存在，jvm会为所有同lambda打交道的变量分配内存
+，导致产生了内存开销会导致严重的性能问题；
+
+解决方案：kotlin的优化机制，内联；有了内联，jvm就不需要使用lambda对象实例，因而避免了变量内存分配
+那里需要lambda，编译器就会将函数体复制粘贴值运行处
+
+注意点：使用lambda的递归函数无法内联，因为会导致复制粘贴无限循环，编译会有警告
+
+内联函数，在函数前加inline即可
